--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,19 @@ services:
                 - '${DB_USERNAME}'
             retries: 3
             timeout: 5s
+    pgadmin:
+        image: dpage/pgadmin4
+        container_name: pgadmin
+        restart: unless-stopped
+        ports:
+            - "5050:80"
+        environment:
+            PGADMIN_DEFAULT_EMAIL: admin@admin.fr
+            PGADMIN_DEFAULT_PASSWORD: admin
+        networks:
+            - sail
+        depends_on:
+            - pgsql
     funnypress-ws:
         build:
             context: https://github.com/mikachou/funnypress-webservice.git
