fix prod config

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -17,15 +17,20 @@ services:
     image: nginx:alpine
     container_name: funnypress-web
     restart: unless-stopped
+    env_file:
+      - ./docker/prod/private.env
     ports:
-      - "80:80"
+      - "443:443"
     volumes:
       - .:/var/www/html
-      - ./docker/prod/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./docker/prod/default.conf.template:/etc/nginx/conf.d/default.conf.template
+      - ./docker/prod/certs:/etc/nginx/certs
     networks:
       - funnypress
     depends_on:
       - app
+    command: >
+      /bin/sh -c "envsubst '$$SERVER_NAME' < /etc/nginx/conf.d/default.conf.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
 
   db:
     image: postgres:17
