--- a/docker/prod/default.conf.template
+++ b/docker/prod/default.conf.template
@@ -1,9 +1,12 @@
 server {
-    listen 80;
-    server_name _;
+    listen 443 ssl;
+    server_name ${SERVER_NAME};
     root /var/www/html/public;
 
     index index.php index.html;
+
+    ssl_certificate     /etc/nginx/certs/selfsigned.crt;
+    ssl_certificate_key /etc/nginx/certs/selfsigned.key;
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
