--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -10,6 +10,8 @@ services:
     working_dir: /var/www/html
     env_file:
       - .env.production
+    volumes:
+      - app-public:/var/www/html/public
     networks:
       - funnypress
 
@@ -22,7 +24,7 @@ services:
     ports:
       - "443:443"
     volumes:
-      - .:/var/www/html
+      - app-public:/var/www/html/public:ro
       - ./docker/prod/default.conf.template:/etc/nginx/conf.d/default.conf.template
       - ./docker/prod/certs:/etc/nginx/certs
     networks:
@@ -61,3 +63,4 @@ networks:
 volumes:
   funnypress-data:
     driver: local
+  app-public:
